fix: remove max width on body and add utility to hide scrollbar on webkit

--- a/apps/webapp/src/styles/globals.css
+++ b/apps/webapp/src/styles/globals.css
@@ -13,11 +13,15 @@ html {
 
 body {
   min-height: 100vh;
-  max-width: 1680px;
+  /* max-width: 1680px; */
 }
 
 @layer utilities {
   .mono {
     font-variation-settings: "MONO" 1;
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
   }
 }
